style: fix overlapping sections, some padding p tags

--- a/shared/tailwind.css
+++ b/shared/tailwind.css
@@ -10,7 +10,8 @@ code {
   background-color: #9efefe;
 }
 
-.markdown-body p {
+.markdown-body p,
+p {
   margin-bottom: 0.8em;
 }
 
